<resources>
    <string name="app_name">MoviesBox</string>
    <string name="notificationsPermissionsTitle">是否允许下载相关通知权限？</string>
    <string name="writeExternalStoragePermissionsTitle">未授权会导致使用中可能出现应用崩溃，是否同意授权？</string>
    <string name="permissionsAgree">同意</string>
    <string name="permissionsDisagree">不同意</string>
    <string name="noPermissionsContent">未授权会导致使用中可能出现应用崩溃</string>
    <string name="channelId">download</string>
    <string name="channelName">下载通知</string>
    <string name="channelDescription">下载通知</string>
    <string name="channelInfoId">downloadInfo</string>
    <string name="channelInfoName">下载状态</string>
    <string name="channelInfoDescription">下载状态</string>
    <string name="channelServiceInfoId">downloadService</string>
    <string name="channelServiceInfoName">下载服务</string>
    <string name="channelServiceInfoDescription">下载服务</string>
    <string name="channelCheckServiceInfoId">checkUpdateService</string>
    <string name="channelCheckServiceInfoName">检测更新服务</string>
    <string name="channelCheckServiceInfoDescription">检测更新服务</string>
    <string name="channelRssServiceInfoId">RssService</string>
    <string name="channelRssServiceInfoName">RSS查询服务</string>
    <string name="channelServiceServiceInfoDescription">RSS查询服务</string>
    <string name="exceptionType">异常类型：%s\n</string>
    <string name="exceptionInformation">异常信息：%s\n</string>
    <string name="exceptionStackTrace">异常堆栈跟踪：\n</string>
    <string name="whatCausedTheException">导致异常的原因：%s</string>
    <string name="firstOpenAppDialogContent">本应用只是爬取一些影视网站部分内容编写的第三方APP，所有数据均来自网络，影视资源无法播放多为源网站问题，不要相信视频中的任何广告！\n仅供学习交流，禁止非法传播或用于商业用途！</string>
    <string name="parseVodPlayUrl">解析视频地址中，请稍后&#8230;</string>
    <string name="sniffVodPlayUrl">常规解析失败，尝试嗅探播放地址&#8230;</string>
    <string name="parseVodPlayUrlError">无法获取该视频播放地址！\n1、可能是网站自身无播放地址。\n2、可能是网站开启了CloudFlare等反爬虫安全策略，可尝试在设置中开启绕过浏览器安全检测（建议与视频嗅探同时开启）\n3、可能是网站更改了播放地址相关处理导致代码无法解析，可尝试在设置中开启视频嗅探。</string>
    <string name="sniffVodPlayUrlError">在设定的超时时间内没有嗅探到任何疑似视频的资源链接！</string>
    <string name="parsingErrorContent">!*哦豁,解析异常*!\n%s\n%s</string>
    <string name="errorDialogTitle">!*哦豁,出错啦*!</string>
    <string name="retryBtnText">点击重试</string>
    <string name="closeBtnText">关闭</string>
    <string name="emptyData">无数据</string>
    <string name="errorDanmuMsg">获取弹幕信息失败！</string>
    <string name="loadErrorMsg">数据加载失败</string>
    <string name="otherOperation">操作</string>
    <string name="defaultPositiveBtnText">确定</string>
    <string name="defaultNegativeBtnText">取消</string>
    <string name="yesterday">昨天 </string>
    <string name="today">今天 </string>
    <string name="selectVideoPlayer">请选择视频播放器</string>
    <string name="noAppFound">没有找到匹配的程序</string>
    <string name="pageAndAllPage">"%s/%s页</string>
    <string name="loadPageAndAllPage">加载第%s页，共%s页</string>
    <string name="emptyMyList">空空如也</string>
    <string name="loading">加载中…</string>
    <string name="failedToLoad">加载失败</string>
    <string name="noMoreData">无更多数据</string>
    <string name="noMoreContent">没有更多内容</string>
    <string name="refreshImageText">刷新封面</string>
    <string name="favoriteTabTitle">收藏夹</string>
    <string name="addFavoriteBtnText">加入收藏</string>
    <string name="removeFavoriteBtnText">移除收藏</string>
    <string name="addFavorite">已加入收藏夹</string>
    <string name="removeFavorite">已从收藏夹移除</string>
    <string name="checkFavoriteUpdate">检测影视是否有更新</string>
    <string name="historyTabTitle">历史记录</string>
    <string name="deleteSingleHistory">是否删除该历史记录？</string>
    <string name="deleteAllHistory">是否清空所有历史记录？清空之后就什么都没有了哦~</string>
    <string name="historyDescMenuText">影视详情</string>
    <string name="historyDeleteMenuText">删除</string>
    <string name="noWifiDialogTitle">注意</string>
    <string name="noWifiDialogContent">当前网络未连接到WLAN，确定要继续下载吗？</string>
    <string name="downloadInfoContent">下载须知&#187; \n下载标识：\n\u3000绿色→ 表示该剧集已存在下载任务。\n存储位置：\n\u3000默认存储位置为公共目录/Download/MoviesBox[%s]中（其中Android 11以下需存储授权、Android 11及以上不需要权限但并非所有设备都支持这种方式），如公共目录无法读写或未授予存储权限将存入应用自身私有目录中，可通过SAF自定义授权目录进行导出，导出为复制操作，导出后并不会删除源下载文件，需自行在下载列表进行删除。\n 后台下载：\n\u3000请注意如果你需要在后台进行下载时，由于数据操作是在服务中进行，不同设备可能存在后台、锁屏后下载服务被杀死的情况，请根据自己的设备设置手动将该APP设置电池优化白名单或允许后台运行，否则后台下载时会出现下载失败的情况！\nM3U8协议格式：\n\u3000虽然支持M3U8协议格式的视频下载，由于M3U8协议的特殊性，其中可能存在格式伪装、资源加密、多级域名、key等资源路劲问题，解析方法只能兼容经测试过的部分规则，所以不一定能执行成功，如果下载失败自行删除下载任务！下载成功后会进行ts分片合并通过ffmpeg转为MP4，耗时与设备配置挂钩~\n\u3000下载的视频仅在 我的→ 下载列表中进行播放，其他界面播放还是使用网络解析播放！</string>
    <string name="downloadMultipleVideoDialogTitle">请选择下载资源</string>
    <string name="hasDownloadTask">已存在下载任务，请勿重复执行！</string>
    <string name="notSupportDownloadMsg">不支持的下载格式，该地址可能非视频地址！ -> %s</string>
    <string name="downloadM3u8Tips">该视频资源类型为M3U8，可能无法正常下载成功！</string>
    <string name="downloadStart">开始下载 -> %s</string>
    <string name="episodeSize">%s [共%d集]</string>
    <string name="noEpisode">!*未解析出该剧集播放列表*!\n请检查网站是否存在播放列表或尝试刷新~</string>
    <string name="playUrlParserError">%s -> 播放地址解析失败</string>
    <string name="loadVodDescInfo">请在影视详情加载完毕后再进行操作</string>
    <string name="searchPleaseTryAgainLater">正在执行搜索操作，请稍后再试！</string>
    <string name="downloadTaskOperationTitle">下载任务操作</string>
    <string name="downloadTaskOperationContent">你有%d个未完成的下载任务，是否继续下载？</string>
    <string name="savePrivateDirectoryStr"> <![CDATA[<font color="#FF5722">[私有目录]<font>]]></string>
    <string name="savePublicDirectoryStr"> <![CDATA[<font color="#31BDEC">[公共存储]<font>]]></string>
    <string name="downloadingStr"><![CDATA[<font color="#31BDEC">等待下载<font>]]></string>
    <string name="downloadSuccessfulStr"><![CDATA[<font color="#5FB878">下载成功<font>]]></string>
    <string name="downloadFailedStr"><![CDATA[<font color="#FF5722">下载失败<font>]]></string>
    <string name="transcodingStr"><![CDATA[<font color="#1E9FFF">正在转码<font>]]></string>
    <string-array name="downloadItems">
        <item>继续任务</item>
        <item>暂停任务</item>
        <item><![CDATA[<font color="#ff0000">删除任务<font>]]></item>
    </string-array>
    <string-array name="completeItems">
        <item>使用内置播放器播放</item>
        <item>使用外部播放器播放</item>
        <item><![CDATA[<font color="#ff0000">删除任务<font>]]></item>
    </string-array>
    <string-array name="completeExportItems">
        <item>使用内置播放器播放</item>
        <item>使用外部播放器播放</item>
        <item>导出到外部存储授权目录</item>
        <item><![CDATA[<font color="#ff0000">删除任务<font>]]></item>
    </string-array>
    <string-array name="downloadErrorItems">
        <item>尝试重新下载</item>
        <item><![CDATA[<font color="#ff0000">删除任务<font>]]></item>
    </string-array>
    <string name="taskDoesNotExist">操作出错，任务ID不存在！</string>
    <string name="taskOperationFailedTitle">任务操作失败</string>
    <string name="taskOperationFailedContent">任务ID不存在，无法执行下载，请删除该下载任务！</string>
    <string name="downloadTabTitle">下载列表</string>
    <string name="deleteSingleDownloadDialogSubContent">请选择执行操作</string>
    <string name="deleteSingleDownloadDialogPositiveBtnText">仅数据</string>
    <string name="deleteSingleDownloadDialogNeutralBtnText">和文件一起</string>
    <string name="taskDeletedMsg">已删除该剧集任务</string>
    <string name="resumeDownloadDialogSubPositiveBtnText">继续下载</string>
    <string name="resumeDownloadDialogSubNegativeBtnText">忽略</string>
    <string name="downloadVodNotCompleteListContent">其中有 %s 个未完成</string>
    <string name="downloadVodListContent">共 %s 个内容</string>
    <string name="downloadFileSize">存储占用约: %s</string>
    <string name="waitState">等待下载</string>
    <string name="downloadingState">下载中</string>
    <string name="successState">下载成功</string>
    <string name="errorState">下载失败</string>
    <string name="downloadErrorMsg">❌下载失败 →%s</string>
    <string name="downloadDefaultErrorMsg">未知错误，可能下载的资源不存在或文件路劲不可写！</string>
    <string name="downloadSuccessMsg">下载成功</string>
    <string name="downloadTsSuccessMsg">下载成功&amp;合并TS完成，开始转换为MP4格式</string>
    <string name="convertTSToMP4SuccessMsg">🎉🎉🎉 TS转MP4完成</string>
    <string name="convertTSToMP4ErrorMsg">❌转换出错，错误代码：%s</string>
    <string name="preEpisode">上一集 %s</string>
    <string name="nextEpisode">下一集 %s</string>
    <string name="neverWatched">从未观看</string>
    <string name="watchTo">观看至%s</string>
    <string name="finishedReading">已看完</string>
    <string name="playbackError">播放错误</string>
    <string name="playSource">%s | 播放源%s</string>
    <string name="getPlaylistErrorMsg">获取播放列表时出错</string>
    <string name="getNextEpisodeFailedMoreThan3Times">获取下一集播放地址失败已超过3次，已终止尝试</string>
    <string name="setUserSpeed">设置快进/快退时长</string>
    <string-array name="fast_forward_item">
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
    </string-array>
    <string name="playerSettingTitle">播放器设置</string>
    <string name="hideProgress">播放时隐藏底部进度</string>
    <string name="playNextVideo">自动播放下一集</string>
    <string name="playerOtherTitle">其他操作</string>
    <string name="playWithExternalPlayer">使用外部播放器播放</string>
    <string name="openExternalBrowser">通过浏览器访问原地址</string>
    <string name="change_player_kernel">切换播放器内核</string>
    <string name="selectVideoSource">选择播放源</string>
    <string name="open_drama_list">打开选集列表</string>
    <string name="tipsNotWifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tipsNotWifiCancel">停止播放</string>
    <string name="tipsNotWifiConfirm">继续播放</string>
    <string-array name="speed_item">
        <item>0.5x</item>
        <item>1.0x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>1.75x</item>
        <item>2.0x</item>
        <item>2.5x</item>
        <item>3.0x</item>
    </string-array>
    <string name="upnpDevice">设备列表</string>
    <string name="upnpVideoUrl">播放地址：%s</string>
    <string name="upnpNotice">请选择连接设备，连接设备后才可播放</string>
    <string name="upnpDeviceSelected">已选中: %s</string>
    <string name="upnpProgress">进度</string>
    <string name="upnpVolume">音量</string>
    <string name="upnpPlayBtn">播放</string>
    <string name="upnpPauseBtn">暂停</string>
    <string name="upnpStopBtn">停止</string>
    <string name="upnpExitBtn">退出</string>
    <string name="aboutTitle">关于</string>
    <string name="dataSourcesTitle">数据来源</string>
    <string name="statementTitle">声明</string>
    <string name="statementSubContent">仅供学习交流<![CDATA[<br>]]>禁止非法传播或用于商业用途</string>
    <string name="testModelTitle">测试设备</string>
    <string name="testModelSubContent">Xiaomi 12S Ultra | XiaomiPad 5 Pro<![CDATA[<br>]]>Android 14 | 13</string>
    <string name="currentVersionTitle">当前版本</string>
    <string name="lastBuildDateTitle">最后构建日期</string>
    <string name="lastBuildDateSubContent">2024年10月17日16:23:52</string>
    <string name="cacheDirectoryTitle">存储位置</string>
    <string name="cacheDirectorySubContent">%s<![CDATA[<br>]]>卸载后自行删除此目录</string>
    <string name="authorizationDirectoryTitle">外部存储授权目录</string>
    <string name="openSourceTitle">开源相关</string>
    <string name="enableByPassCF">尝试绕过浏览器安全检测</string>
    <string name="enableByPassCFDialogContent">如果网站能正常解析时不要开启！\n当网站出现安全检查（一般为等待几秒后进入网站这中情况）时可开启尝试！</string>
    <string name="enableByPassCFTimeOutSubContent">设置超时时间，超过设定时间后无论是否成功强制中断访问，单位为秒，范围 1~60秒。</string>
    <string name="setM3u8QueueIgnoreTsTitle">忽略下载失败的ts切片，即使有失败的切片，下载完成后也要合并所有切片，但会丢失下载失败的片段，可能存在某个或多个切片一直下载失败，这种情况如果非要下载该视频时，请开启忽略！</string>
    <string name="setM3u8QueueIgnoreTs">忽略失败的切片</string>
    <string name="setM3u8QueueNumDialogSubContent">︎滑动设置同时下载的ts分片数量，根据网络带宽自行配置，加速M3U8类型资源下载速度。</string>
    <string name="setM3u8RegRemoveAd">尝试移除广告切片</string>
    <string name="setM3u8RemoveAdInfo">通过一些规则尝试过滤M3U8文件ts列表中的广告切片。\n*注意：开启后可能会出现M3U8协议资源无法下载、移除了正常的视频切片导致视频不完整等异常！</string>
    <string name="classificationQuery">分类查询</string>
    <string name="resetCondition">重置条件</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
</resources>