<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ThemeOverlay.App.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/round_arrow_back_ios_new_24"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:layout_scrollEffect="compress"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyTabLayoutStyle"
                app:tabGravity="fill"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"/>

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/item_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

            </com.google.android.material.tabs.TabLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/mSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showAnimationBehavior="inward"
                app:hideAnimationBehavior="outward"
                android:indeterminate="true" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpage2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>