<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/device_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:text="@string/upnpDevice" />

            <ProgressBar
                android:layout_toEndOf="@+id/device_title"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fadingEdge="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/upnpNotice"/>

        <TextView
            android:id="@+id/video_url"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upnpProgress" />

                <SeekBar
                    android:id="@+id/seekbar_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_below="@+id/time"
                android:id="@+id/duration"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upnpVolume" />

            <SeekBar
                android:id="@+id/seekbar_volume"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonGroup
                android:id="@+id/buttonGroup"
                style="@style/Widget.Material3.MaterialButtonGroup.Connected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/play"
                    style="?attr/materialButtonOutlinedStyle"
                    android:textColor="@color/pinka200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/upnpPlayBtn" />

                <Button
                    android:id="@+id/pause"
                    style="?attr/materialButtonOutlinedStyle"
                    android:backgroundTint="@color/button_group_background_selector"
                    android:textColor="@color/pinka200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/upnpPauseBtn" />

                <Button
                    android:id="@+id/stop"
                    style="?attr/materialButtonOutlinedStyle"
                    android:backgroundTint="@color/button_group_background_selector"
                    android:textColor="@color/pinka200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/upnpStopBtn" />

                <Button
                    android:id="@+id/exit"
                    style="?attr/materialButtonOutlinedStyle"
                    android:backgroundTint="@color/button_group_background_selector"
                    android:textColor="@color/pinka200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/upnpExitBtn" />

            </com.google.android.material.button.MaterialButtonGroup>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>
