<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTabLayoutStyle"
            app:tabGravity="fill"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/round_bookmark_added_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoriteTabTitle" />

            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/round_history_toggle_off_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyTabTitle" />

            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/round_download_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloadTabTitle"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpage2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>