<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:paddingRight="25dp"
                android:orientation="vertical">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/ignoreTs"
                    style="@style/Widget.App.Switch"
                    android:checked="true"
                    android:textSize="16sp"
                    android:text="@string/setM3u8QueueIgnoreTs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/round_info_24"
                    app:tint="@color/sub_content_color"
                    android:layout_marginBottom="8dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <TextView
                    android:text="@string/setM3u8QueueIgnoreTsTitle"
                    android:textSize="12sp"
                    android:textColor="@color/sub_content_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/setM3u8QueueNumSlider"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:trackHeight="18dp"
                app:trackColorInactive="@color/pink50"
                app:trackColorActive="@color/pinka100"
                app:tickColorActive="@color/pink50"
                app:tickColorInactive="@color/pinka100"
                app:thumbColor="@color/pinka100"
                android:value="20"
                android:stepSize="1"
                android:valueFrom="4.0"
                android:valueTo="100.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/round_info_24"
                    app:tint="@color/sub_content_color"
                    android:layout_marginBottom="8dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/sub_content_color"
                    android:text="@string/setM3u8QueueNumDialogSubContent" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/removeAdTs"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.App.Switch"
                    android:textSize="16sp"
                    android:text="@string/setM3u8RegRemoveAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@drawable/round_info_24"
                    app:tint="@color/sub_content_color"
                    android:layout_marginBottom="8dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/sub_content_color"
                    android:text="@string/setM3u8RemoveAdInfo" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
