<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:paddingRight="25dp">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enableByPassCF"
            style="@style/Widget.App.Switch"
            android:textSize="16sp"
            android:text="@string/enableByPassCF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/round_info_24"
            app:tint="@color/sub_content_color"
            android:layout_marginBottom="8dp"
            android:layout_width="18dp"
            android:layout_height="18dp"/>

        <TextView
            android:text="@string/enableByPassCFDialogContent"
            android:textSize="12sp"
            android:textColor="@color/sub_content_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.slider.Slider
            android:id="@+id/setByPassCFTimeOut"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackHeight="24dp"
            app:trackColorInactive="@color/pink50"
            app:trackColorActive="@color/pinka100"
            app:tickColorActive="@color/pink50"
            app:tickColorInactive="@color/pinka100"
            app:thumbColor="@color/pinka100"
            android:value="10"
            android:stepSize="1"
            android:valueFrom="1.0"
            android:valueTo="60.0" />

        <ImageView
            android:src="@drawable/round_info_24"
            app:tint="@color/sub_content_color"
            android:layout_marginBottom="8dp"
            android:layout_width="18dp"
            android:layout_height="18dp"/>

        <TextView
            android:text="@string/enableByPassCFTimeOutSubContent"
            android:textSize="12sp"
            android:textColor="@color/sub_content_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/website"
            android:textSize="12sp"
            android:textColor="@color/sub_content_color"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>